# jupyter-notebook-retirement-portfolio-modeler

./: .gitignore  AGENTS.md  README.md  hello.py  pyproject.toml  run_papermill.sh  sample_papermill_settings.yaml
docs/adr/: 0001-record-architecture-decisions.md  0002-shift-to-action-oriented-modeling.md
notebooks/: asset_modeler.ipynb  asset_modeler.py
notebooks/plugins/: actions.py  base_asset.py  basic_asset.py  constants.py  modeler.py  real_estate_asset.py  stock_asset.py
tests/: test_sqlite.py
tests/plugins/: test_base_asset.py  test_modeler.py  test_stock_asset.py
