[project]
name = "jupyter-notebook-retirement-portfolio-modeler"
version = "0.1.0"
description = "A jupyter notebook that models a mixed set of assets over time using monte carlo simulations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "great-tables>=0.18.0",
    "jupyterlab>=4.4.6",
    "jupytext>=1.17.2",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "papermill>=2.6.0",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "seaborn>=0.13.2",
    "yahooquery>=2.4.1",
]

[tool.basedpyright]
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportUnknownMemberType = false
