[project]
name = "jupyter-notebook-retirement-portfolio-modeler"
version = "0.1.0"
description = "A jupyter notebook that models a mixed set of assets over time using monte carlo simulations"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Dane Summers", email = "dsummersl@gmail.com" }]
license = { text = "Apache-2.0" }
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved",
"Typing :: Typed",
]
dependencies = [
    "great-tables>=0.18.0",
    "jupyterlab>=4.4.6",
    "jupytext>=1.17.2",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "papermill>=2.6.0",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "seaborn>=0.13.2",
    "types-seaborn>=0.13.2.20250809",
    "yahooquery>=2.4.1",
]

[tool.basedpyright]
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportUnknownMemberType = false

[dependency-groups]
dev = [
"pytest>=8",
"pytest-cov>=6",
"ruff>=0.5",
"mypy>=1.10",
"pre-commit>=3.7"
]

[tool.ruff]
line-length = 100
exclude = [".venv", ".git", "build", "dist"]
lint.ignore = ["E402"]

[tool.mypy]
python_version = "3.11"
packages = ["notebooks"]

[[tool.mypy.overrides]]
module = "yahooquery"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=notebooks --cov-report=term-missing"
